--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ semver = "1.0.3"
 log = "0.4"
 clap = { version = "4.5.18", features = ["color", "derive", "cargo", "string", "wrap_help"] }
 regex = "1.5.6"
-cbindgen = { version="0.29.0", default-features=false }
+cbindgen = { version="0.29.0", default-features=false, git = "https://github.com/mxyns/cbindgen", branch = "merge-generic-tags-mlevi" }
 toml = "0.9"
 serde = "1.0.123"
 serde_derive = "1.0"
